# haip-poc

./: .gitignore  README.md  pyproject.toml
haip_poc/: agent.py  audio.py  google_stt.py  google_tts.py  main.py  models.py  overlay.py
scenarios/: example_scenario.json
